fix white border on mobile

--- a/handlers/Base/styles.css
+++ b/handlers/Base/styles.css
@@ -62,7 +62,7 @@ blockquote p {
   font-size: inherit;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 767px) {
   .AppBase {
     margin: 0;
   }
